[metrics] metrics improvements
- first pass at rolling metrics into openshift_hosted
- additional knobs for metrics deployment

--- a/roles/openshift_hosted/tasks/main.yml
+++ b/roles/openshift_hosted/tasks/main.yml
@@ -14,6 +14,7 @@
 
 - include: router/router.yml
 - include: registry/registry.yml
+- include: metrics/metrics.yml
 
 - name: Delete temp directory
   file:
