Do not install rpm for version in openshift_version role.

--- a/roles/openshift_common/meta/main.yml
+++ b/roles/openshift_common/meta/main.yml
@@ -13,4 +13,5 @@ galaxy_info:
   - cloud
 dependencies:
 - role: openshift_facts
-- role: openshift_docker
+- role: openshift_repos
+- role: openshift_version
