--- a/playbooks/common/openshift-master/config.yml
+++ b/playbooks/common/openshift-master/config.yml
@@ -317,7 +317,7 @@
   vars:
     sync_tmpdir: "{{ hostvars.localhost.g_master_mktemp.stdout }}"
 
-    # Do not pass a version if this is first master. (openshift_docker will sort it out)
+    # Do not pass a version if this is first master. (openshift_version will sort it out)
     # For subsequent masters we pass either pre-existing version for the master (if already installed),
     # otherwise the first master version.
     openshift_version: "{{ openshift.common.version if openshift.common.version is defined else oo_first_master.openshift.common.version.split('-')[0] }}"
