--- a/roles/openshift_version/tasks/set_version_rpm.yml
+++ b/roles/openshift_version/tasks/set_version_rpm.yml
@@ -7,17 +7,16 @@
     openshift_version: "{{ openshift_pkg_version[1:].split('-')[0] }}"
   when: openshift_pkg_version is defined and openshift_version is not defined
 
-# We do not have as fine grained control over version to install presently with rpms,
-# we just assume the user has configured the correct repos and install the rpm requested.
-- name: Install latest rpm available in configured repos to check version
-  action: "{{ ansible_pkg_mgr }} name={{ openshift.common.service_type }}{{ openshift_version | default('') | oo_image_tag_to_rpm_version(include_dash=True) }} state=present"
+- name: Gather common package version
+  command: >
+    {{ repoquery_cmd }} --qf '%{version}' "{{ openshift.common.service_type}}"
+  register: common_version
+  failed_when: false
+  changed_when: false
   when: openshift_version is not defined
 
-- name: Reload facts to pick up version
-  openshift_facts:
-  when: openshift_version is not defined
+- debug: var=common_version
 
-- name: Set rpm version to configure to latest available in repos
-  set_fact:
-    openshift_version: "{{ openshift.common.version }}"
+- set_fact:
+    openshift_version: "{{ common_version.stdout | default('0.0', True) }}"
   when: openshift_version is not defined
