Fix Docker 1.10 problems with empty tags and trailing :
Docker 1.10 is no longer tolerant of commands like "docker pull
myimage:" when we do not have an image tag in play.

Adjust all occurrences with one that only includes the : if a version is
defined.

Adjust the containerized CLI wrappers for a similar problem.

--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -29,7 +29,7 @@
 
 - name: Pull master image
   command: >
-    docker pull {{ openshift.master.master_image }}:{{ openshift_version }}
+    docker pull {{ openshift.master.master_image }}{{ ':' + openshift_version if openshift_version is defined and openshift_version != '' else '' }}
   when: openshift.common.is_containerized | bool
 
 - name: Create openshift.common.data_dir
