--- a/roles/openshift_facts/tasks/main.yml
+++ b/roles/openshift_facts/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
-- name: Verify Ansible version is greater than or equal to 1.9.4
+- name: Verify Ansible version is greater than or equal to 2.1.0.0
   fail:
-    msg: "Unsupported ansible version: {{ ansible_version }} found"
-  when: not ansible_version.full | version_compare('1.9.4', 'ge')
+    msg: "Unsupported ansible version: {{ ansible_version.full }} found"
+  when: not ansible_version.full | version_compare('2.1.0.0', 'ge')
 
 - name: Detecting Operating System
   stat:
