[profiling] Start to supporting OPENSHIFT_PROFILE
- Support for specifying the port is needed for master hosts

--- a/roles/openshift_master_facts/tasks/main.yml
+++ b/roles/openshift_master_facts/tasks/main.yml
@@ -77,3 +77,4 @@
       image_policy_config: "{{ openshift_master_image_policy_config | default(None) }}"
       dynamic_provisioning_enabled: "{{ openshift_master_dynamic_provisioning_enabled | default(None) }}"
       max_requests_inflight: "{{ openshift_master_max_requests_inflight | default(None) }}"
+      profile: "{{ openshift_master_profile | default(none) }}"
