Fix missing openshift.common.version fact on containerized nodes.

--- a/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/pre.yml
+++ b/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/pre.yml
@@ -107,7 +107,9 @@
   hosts: oo_nodes_to_config
   roles:
   - openshift_facts
+  - openshift_docker_facts
   tasks:
+  - debug: var=openshift.docker.openshift_version
   - name: Ensure Node is running
     service:
       name: "{{ openshift.common.service_type }}-node"
