Add per-service environment variables.

--- a/roles/openshift_master_facts/tasks/main.yml
+++ b/roles/openshift_master_facts/tasks/main.yml
@@ -78,3 +78,5 @@
       image_policy_config: "{{ openshift_master_image_policy_config | default(None) }}"
       dynamic_provisioning_enabled: "{{ openshift_master_dynamic_provisioning_enabled | default(None) }}"
       max_requests_inflight: "{{ openshift_master_max_requests_inflight | default(None) }}"
+      api_env_vars: "{{ openshift_master_api_env_vars | default(None) }}"
+      controllers_env_vars: "{{ openshift_master_controllers_env_vars | default(None) }}"
