--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -183,6 +183,8 @@
 - name: Mask master service
   command: systemctl mask {{ openshift.common.service_type }}-master
   when: openshift_master_ha | bool and openshift.master.cluster_method == 'native' and not openshift.common.is_containerized | bool
+  register: mask_master
+  changed_when: "'Created symlink' in mask_master.stdout"
 
 - name: Start and enable master api
   service: name={{ openshift.common.service_type }}-master-api enabled=yes state=started
