Make openshift_version role docker dep conditional.

--- a/roles/openshift_version/meta/main.yml
+++ b/roles/openshift_version/meta/main.yml
@@ -14,4 +14,6 @@ galaxy_info:
 dependencies:
 - role: openshift_repos
 - role: openshift_docker_facts
+  when: openshift.common.is_containerized | default(False) | bool
 - role: docker
+  when: openshift.common.is_containerized | default(False) | bool
