Always populate openshift_image_tag and openshift_pkg_version.
Allows the use of arbitrary tags, precise control over containers and
rpms, and likely mixed environments.

--- a/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/pre.yml
+++ b/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/pre.yml
@@ -140,7 +140,7 @@
 
   - name: Verify containers are available for upgrade
     command: >
-      docker pull {{ openshift.common.cli_image }}:v{{ openshift_version }}
+      docker pull {{ openshift.common.cli_image }}:{{ openshift_image_tag }}
     when: openshift.common.is_containerized | bool
 
   - set_fact:
